number suggestions take range annotation into consideration